Updates from ShareLaTeX

--- a/Formato.sty
+++ b/Formato.sty
@@ -9,8 +9,12 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} %acentos
 \usepackage{wrapfig}
+\usepackage[flushleft]{threeparttable}
+\usepackage{array}
+\newcolumntype{x}[1]{>{\centering\arraybackslash\hspace{0pt}}p{#1}}
 
 \usepackage[pdftex]{graphicx}
+
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -80,3 +84,14 @@
 % Creaci?n del entorno Definici?n
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[chapter]
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Nuevos comandos
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\usepackage[normalem]{ulem}
+%\usepackage{color}
+%\usepackage[margin=2in]{geometry}
+%\usepackage{todonotes}
+\newcommand{\del}[1]{\textcolor{red}{\sout{#1}}} %\sout}
+\newcommand{\new}[1]{\textcolor{blue}{\uline{#1}}} %\sout}
