--- a/courseware.tex
+++ b/courseware.tex
@@ -1,9 +1,9 @@
 \section{Courseware}
 \label{rasim:courseware}
-\todo{Introducir esto como contribución}
-Todos los elementos anteriormente citados conforman un simulador de \ac{RV} por si mismo, pero no conforman una herramienta de entrenamiento sin un software que oriente al usuario en el proceso de aprendizaje. Por tanto, el \ac{Courseware} es una pieza clave en el sistema debido es el responsable de al aglutinar todos los componentes que forman el simulador para proporcionar una funcionalidad de entrenamiento. El software se ha diseñado con la finalidad de ser la interfaz del motor de \ac{RV} y ayude al usuario a interaccionar con él. Esto consigue que el simulador se convierta en una herramienta de aprendizaje y evaluación. Además, con el objetivo de garantizar un aprendizaje autónomo, este módulo deberá proporcionar una evaluación formativa y sumativa.
+%\todo{Introducir esto como contribución}
+Todos los elementos anteriormente citados conforman un simulador de \ac{RV} por si mismo, pero no conforman una herramienta de entrenamiento sin un software que oriente al usuario en el proceso de aprendizaje. Por tanto, se ha contribuido en la creación del módulo \ac{Courseware}, que gestiona todos los componentes del simulador y se encarga de implementar todas las tareas de relacionadas con el entrenamiento. El software se ha diseñado con la finalidad de ser la interfaz del motor de \ac{RV} y ayude al usuario a interaccionar con él. Esto consigue que el simulador se convierta en una herramienta de aprendizaje y evaluación. Además, con el objetivo de garantizar un aprendizaje autónomo, este módulo deberá proporcionar una evaluación formativa y sumativa.  De esta forma, el \ac{Courseware} es el encargado de permitir al usuario identificarse y comunicarse con el servidor. En el servidor se almacenan los materiales multimedia y los escenarios que se cargarán en el simulador. La aplicación también es la encargada de inicializar el motor de \ac{RV} con los módulos de simulación. También es el encargado de presentar la interfaz gráfica que se mostrará a través de los monitores. Por una parte, mostrará la vista de paciente, y por otra la vista del \ac{Courseware}. Esta ventana contendrá a su vez la información del simulador de ultrasonidos y todos los botones y la información adicional asociada al modo de simulación que se esté ejecutando.
 
-De esta forma, el \ac{Courseware} es el encargado de permitir al usuario identificarse y comunicarse con el servidor. En el servidor se almacenan los materiales multimedia y los escenarios que se cargarán en el simulador. La aplicación también es la encargada de inicializar el motor de \ac{RV} con los módulos de simulación. También es el encargado de presentar la interfaz gráfica que se mostrará a través de los monitores. Por una parte, mostrará la vista de paciente, y por otra la vista del \ac{Courseware}. Esta ventana contendrá a su vez la información del simulador de ultrasonidos y todos los botones y la información adicional asociada al modo de simulación que se esté ejecutando.
+Este software permitirá comprobar si la herramienta de generación de \ac{VPH}, y por tanto la herramienta \ac{TPTVPH}, es útil para entrenar el procedimiento de \ac{RA}.
 
 
 
