--- a/introrasim.tex
+++ b/introrasim.tex
@@ -1,16 +1,23 @@
 \chapter{RASim} 
 \label{cap:rasim}
 
-En este capítulo se procede a mostrar la implementación del algoritmo propuesto, en una herramienta con un objetivo de uso real. Uno de los objetivos del proyecto \ac{RASimAs} es crear un simulador médico (\ac{RASim}) para entrenar en el procedimiento \ac{RA} con la intención de permitir a los usuarios desarrollar sus habilidades tanto cognitivas y no cognitivas y ayuda a mejorar la confianza en el procedimiento. 
 
-El simulador médico \ac{RASim} da la posibilidad de entrenar el procedimiento utilizando material médico similares como las agujas y la sonda de ultrasonidos con el objetivo de entrenar y mejorar sus habilidades en el procedimiento. Además, este simulador dispone de una base de datos que permita al médico en formación experimentar multitud de variabilidades anatómicas generadas a partir de otros modelos o de imágenes médicas. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento.
+\new{Ideas: Este capitulo se presenta un caso del uso del algoritmo detallado en el capitulo anterior. En este caso la posición del paciente se adapta en preproceso. Es decir antes de que comience la simulación. Aunque el procedimiento es supervisado, por lo que la selección de poses debe funcionar en tiempo-real una vez seleccionada la posé se pude aplicar la fase de optimización del algoritmo. Por el contrario en la herramienta de rayo X, la modificación de la pose es en tiempo real por lo que no se puede usar la etapa de optimización. PONLO BONITO}
+En este capítulo se presenta un caso de uso donde se ha integrado el algoritmo propuesto en el capítulo \ref{cap:posing}.
+En ocasiones el procedimiento médico que se va a realizar necesita que los modelos virtuales disponibles se encuentren en una posición determinada diferente a la postura que presentan. Esto suele ser debido a que la posición requerida no es habitual que sea la misma postura en la que se presentan los pacientes virtuales o modelos generados a partir de información de imágenes médicas.
+Para modificar esa postura, se necesitaría un algoritmo que sea capaz de transformar un modelo virtual con estructuras internas de una postura a otra. Debido que en la mayoría de las ocasiones, no se dispone de todos los tejidos o de sus propiedades mecánicas, este método deberá ser capaz de generar deformaciones plausibles útiles para el entrenamiento.
 
-En ocasiones el procedimiento médico que se va a realizar necesita que los modelos virtuales disponibles se encuentren en una posición determinada diferente a la postura que presentan. Esto suele ser debido a que la posición requerida  no es habitual que sea la misma postura en la que se presentan los pacientes virtuales o modelos generados a partir de información de imágenes médicas.
-Para modificar esa postura, se necesitaría un algoritmo que sea capaz de transformar un modelo virtual con estructuras internas de una pose a otra. Debido que en la mayoría de las ocasiones, no se dispone de todos los tejidos o de sus propiedades mecánicas, este método deberá ser capaz de generar deformaciones plausibles útiles para el entrenamiento.
+El algoritmo propuesto en el capítulo anterior ha sido incorporado en la herramienta \ac{ITGVPH} (ver sección \ref{intro:context}) que se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esta herramienta será la encargada de crear los pacientes virtuales que se utilizarán en el simulador \ac{RASim}. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En este capítulo se mostrarán las contribuciones aportadas en la integración de esta herramienta dentro del proyecto \ac{RASimAs}.
 
-El algoritmo propuesto en el capítulo anterior ha sido incorporado en la herramienta  offline \ac{TPTVPH} (ver sección \ref{intro:context}) que se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esta herramienta será la encargada de crear los pacientes virtuales que se utilizarán en el simulador \ac{RASim}. En este capítulo se mostrarán las contribuciones aportadas en la integración de esta herramienta dentro del proyecto \ac{RASimAs}.
+%Uno de los objetivos del proyecto \ac{RASimAs} es crear un simulador médico (\ac{RASim}) para entrenar en el procedimiento \ac{RA}. 
 
-Adicionalmente, también se describirá todas las contribuciones que se han realizado con el objetivo de construir el prototipo del simulador \ac{RASim} y que pueda ser usado como herramienta de aprendizaje del procedimiento de \ac{RA}.
+
+Adicionalmente, también se describirá todas las contribuciones que se han realizado con el objetivo de construir el prototipo del simulador \ac{RASim}. Este simulador permitirá validar si la salida de la herramienta \ac{ITGVPH} es útil para el entrenamiento.
+
+Se ha desarrollado una aplicación de entrenamiento y autoevaluación para que el simulador pueda ser usado como herramienta de aprendizaje del procedimiento de \ac{RA}. 
+El simulador médico \ac{RASim} da la posibilidad de entrenar el procedimiento utilizando material médico similares como las agujas y la sonda de ultrasonidos con la intención de permitir a los usuarios entrenar el procedimiento y desarrollar sus habilidades tanto cognitivas y no cognitivas, ayudando a mejorar su confianza en el procedimiento. El usuario podrá elegir entre modos de entrenamiento, donde la  aplicación registrará métricas de rendimiento con el objetivo de proporcionar retroalimentación sumativa y formativa. %Además, este simulador dispone de una base de datos que permita al médico en formación experimentar multitud de variabilidades anatómicas generadas a partir de otros modelos o de imágenes médicas. 
+
+
 
 
 
