Updates from ShareLaTeX

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -40,7 +40,7 @@ pages="822--829",
 isbn="978-3-540-85990-1"
 }
 
-http://www.ascension-tech.com/medical/trakSTAR.php
+
 
 
 @misc{Ascension ,
@@ -105,6 +105,59 @@ note = { Consulta: Octubre 2018},
   note={Consulta: Julio de 2018},
   howpublished ={\url{http://www. h3dapi. org}}
 }
+
+@misc{ded3.3,
+  title={Deliverable D3.3},
+  author={INRIA},
+
+  note={Consulta: Diciembre de 2018},
+  howpublished ={\url{http://rasimas.imib.rwth-aachen.de/member_area/documents_ma/Deliverables/D3.3/D3.3\%20report_v2.1.pdf}}
+}
+
+@misc{ded4.4,
+  title={Deliverable D4.4},
+  author={URJC},
+
+  note={Consulta: Diciembre de 2018},
+  howpublished ={\url{http://rasimas.imib.rwth-aachen.de/member_area/documents_ma/Deliverables/RASimAs_D4.4-Training \%20functions\%20of\%20Simulator_finalversion.pdf}}
+}
+
+
+@misc{touch,
+  title={Touch},
+  author={3D Systems},
+
+  note={Consulta: Diciembre de 2018},
+  howpublished ={\url{https://es.3dsystems.com/haptics-devices/touch}}
+}
+
+
+
+@misc{sofaweb,
+  title={SOFA: Simulation Open Framework Architecture},
+  author={SOFA Consortium},
+  year={2018},
+  howpublished ={\url{https://www.sofa-framework.org/}},
+note = {Consulta: Octubre 2018}
+}
+
+
+
+@inproceedings{deOliveira:2015,
+ author = {de Oliveira, J. E. E. and Giessler, P. and Deserno, T. M.},
+ title = {Image Registration Methods for Patient-specific Virtual Physiological Human Models},
+ booktitle = {Proceedings of the Eurographics Workshop on Visual Computing for Biology and Medicine},
+ series = {VCBM '15},
+ year = {2015},
+ isbn = {978-3-905674-82-8},
+ location = {Chester, United Kingdom},
+ pages = {31--40},
+ numpages = {10},
+ doi = {10.2312/vcbm.20151206},
+ acmid = {2853960},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
+} 
 
 
 
