--- a/introrasim.tex
+++ b/introrasim.tex
@@ -2,20 +2,24 @@
 \label{cap:rasim}
 
 
-\new{Ideas: Este capitulo se presenta un caso del uso del algoritmo detallado en el capitulo anterior. En este caso la posición del paciente se adapta en preproceso. Es decir antes de que comience la simulación. Aunque el procedimiento es supervisado, por lo que la selección de poses debe funcionar en tiempo-real una vez seleccionada la posé se pude aplicar la fase de optimización del algoritmo. Por el contrario en la herramienta de rayo X, la modificación de la pose es en tiempo real por lo que no se puede usar la etapa de optimización. PONLO BONITO}
-En este capítulo se presenta un caso de uso donde se ha integrado el algoritmo propuesto en el capítulo \ref{cap:posing}.
-En ocasiones el procedimiento médico que se va a realizar necesita que los modelos virtuales disponibles se encuentren en una posición determinada diferente a la postura que presentan. Esto suele ser debido a que la posición requerida no es habitual que sea la misma postura en la que se presentan los pacientes virtuales o modelos generados a partir de información de imágenes médicas.
-Para modificar esa postura, se necesitaría un algoritmo que sea capaz de transformar un modelo virtual con estructuras internas de una postura a otra. Debido que en la mayoría de las ocasiones, no se dispone de todos los tejidos o de sus propiedades mecánicas, este método deberá ser capaz de generar deformaciones plausibles útiles para el entrenamiento.
+\del{Ideas: Este capitulo se presenta un caso del uso del algoritmo detallado en el capitulo anterior. En este caso la posición del paciente se adapta en preproceso. Es decir antes de que comience la simulación. Aunque el procedimiento es supervisado, por lo que la selección de poses debe funcionar en tiempo-real una vez seleccionada la posé se pude aplicar la fase de optimización del algoritmo. Por el contrario en la herramienta de rayo X, la modificación de la pose es en tiempo real por lo que no se puede usar la etapa de optimización. PONLO BONITO}
 
-El algoritmo propuesto en el capítulo anterior ha sido incorporado en la herramienta \ac{ITGVPH} (ver sección \ref{intro:context}) que se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esta herramienta será la encargada de crear los pacientes virtuales que se utilizarán en el simulador \ac{RASim}. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En este capítulo se mostrarán las contribuciones aportadas en la integración de esta herramienta dentro del proyecto \ac{RASimAs}.
+\new{En este capítulo se presenta un caso de uso donde se ha integrado el algoritmo propuesto en el capítulo \ref{cap:posing}. El objetivo es adaptar la posición del paciente virtual en la \emph{suite} \ac{ITGVPH} (ver sec. \ref{intro:context}) que prepara los modelos con los que se trabajar en el simulador \ac{RASim}. Este proceso debe ser automático exceptuando la selección de poses. El profesional médico deberá supervisar la deformación producida, debido a que no se dispone de descripciones completas o mecánicas del modelo anatómico. También, se permitirá al usuario podrá ejecutar la fase de optimización ya que, en este caso, la interactividad no es crítica. %En el siguiente capítulo, el segundo caso de uso primará la interactividad, por la cual esta etapa será omitida.
+}
+
+
+
+%El algoritmo propuesto en el capítulo anterior ha sido incorporado en la herramienta \ac{ITGVPH} (ver sección \ref{intro:context}) que se encargará de generar la base de datos necesaria para que los usuarios puedan entrenar con una variabilidad anatómica extensa. Esta herramienta será la encargada de crear los pacientes virtuales que se utilizarán en el simulador \ac{RASim}. Esto permite al usuario enfrentarse a diferentes tipos de situaciones y mejorar el entrenamiento del procedimiento. En este capítulo se mostrarán las contribuciones aportadas en la integración de esta herramienta dentro del proyecto \ac{RASimAs}.
 
 %Uno de los objetivos del proyecto \ac{RASimAs} es crear un simulador médico (\ac{RASim}) para entrenar en el procedimiento \ac{RA}. 
 
 
-Adicionalmente, también se describirá todas las contribuciones que se han realizado con el objetivo de construir el prototipo del simulador \ac{RASim}. Este simulador permitirá validar si la salida de la herramienta \ac{ITGVPH} es útil para el entrenamiento.
+%\del{Adicionalmente, también se describirá todas las contribuciones que se han realizado con el objetivo de construir el prototipo del simulador \ac{RASim}. Este simulador permitirá validar si la salida de la herramienta \ac{ITGVPH} es útil para el entrenamiento.}
 
-Se ha desarrollado una aplicación de entrenamiento y autoevaluación para que el simulador pueda ser usado como herramienta de aprendizaje del procedimiento de \ac{RA}. 
-El simulador médico \ac{RASim} da la posibilidad de entrenar el procedimiento utilizando material médico similares como las agujas y la sonda de ultrasonidos con la intención de permitir a los usuarios entrenar el procedimiento y desarrollar sus habilidades tanto cognitivas y no cognitivas, ayudando a mejorar su confianza en el procedimiento. El usuario podrá elegir entre modos de entrenamiento, donde la  aplicación registrará métricas de rendimiento con el objetivo de proporcionar retroalimentación sumativa y formativa. %Además, este simulador dispone de una base de datos que permita al médico en formación experimentar multitud de variabilidades anatómicas generadas a partir de otros modelos o de imágenes médicas. 
+\new{Además, en este capítulo también se detallará las contribuciones realizadas al simulador \ac{RASim} con el desarrollo del módulo \ac{Courseware} como herramienta de entrenamiento y autoevaluación.}
+
+%\del{Se ha desarrollado una aplicación de entrenamiento y autoevaluación para que el simulador se use como herramienta de aprendizaje del procedimiento de \ac{RA}. 
+%El simulador médico \ac{RASim} da la posibilidad de entrenar el procedimiento utilizando material médico similares como las agujas y la sonda de ultrasonidos con la intención de permitir a los usuarios entrenar el procedimiento y desarrollar sus habilidades tanto cognitivas y no cognitivas, ayudando a mejorar su confianza en el procedimiento. El usuario podrá elegir entre modos de entrenamiento, donde la  aplicación registrará métricas de rendimiento con el objetivo de proporcionar retroalimentación sumativa y formativa.} %Además, este simulador dispone de una base de datos que permita al médico en formación experimentar multitud de variabilidades anatómicas generadas a partir de otros modelos o de imágenes médicas. 
 
 
 
